tests/grammar/schema/init/init_kwargs_fail_1/stderr.golden
error[E1001]: InvalidSyntax
 --> ${CWD}/main.k:5:32
  |
5 | person = Person(_name="Alice", 12) {}
  |                                ^ positional argument follows keyword argument
  |